-
Bug
-
Resolution: Fixed
-
Blocker
-
None
-
Lustre 2.3.0, Lustre 2.1.5, Lustre 2.1.6
-
server: 2.1.5
client: lustre-master build #1481
-
3
-
8198
This issue was created by maloo for sarah <sarah@whamcloud.com>
This issue relates to the following test suite run: http://maloo.whamcloud.com/test_sets/a00f384c-b88e-11e2-891d-52540035b04c.
The sub-test test_27B failed with the following error:
test failed to respond and timed out
Not sure if it is a dup of LU-2523, client 2 console:
01:37:52:Lustre: DEBUG MARKER: == sanity test 27B: call setstripe on open unlinked file/rename victim == 01:37:52 (1368002272) 01:37:52:LustreError: 28321:0:(llite_lib.c:1792:ll_update_inode()) ASSERTION( lu_fid_eq(&lli->lli_fid, &body->fid1) ) failed: Trying to change FID [0x2000013a0:0x1b2f5:0x0] to the [0x2000013a0:0x1b2f4:0x0], inode 144115272364700404/33554451(ffff88007c3dcb78) 01:37:52:LustreError: 28321:0:(llite_lib.c:1792:ll_update_inode()) LBUG 01:37:52:Pid: 28321, comm: multiop 01:37:52: 01:37:52:Call Trace: 01:37:52: [<ffffffffa03d6895>] libcfs_debug_dumpstack+0x55/0x80 [libcfs] 01:37:52: [<ffffffffa03d6e97>] lbug_with_loc+0x47/0xb0 [libcfs] 01:37:52: [<ffffffffa0a88974>] ll_update_inode+0x334/0x890 [lustre] 01:37:52: [<ffffffffa0a95b22>] ll_prep_inode+0x192/0xf60 [lustre] 01:37:52: [<ffffffffa03e72c1>] ? libcfs_debug_msg+0x41/0x50 [libcfs] 01:37:52: [<ffffffffa0a7b756>] ll_intent_file_open+0x566/0xfd0 [lustre] 01:37:52: [<ffffffffa0aa3920>] ? ll_md_blocking_ast+0x0/0x750 [lustre] 01:37:52: [<ffffffffa0a7c248>] ll_lov_setstripe_ea_info+0x88/0x2d0 [lustre] 01:37:52: [<ffffffffa0a7ec15>] ll_lov_setstripe+0x95/0x5a0 [lustre] 01:37:52: [<ffffffffa0a8080a>] ll_file_ioctl+0xa9a/0x26b0 [lustre] 01:37:52: [<ffffffff8104757c>] ? __do_page_fault+0x1ec/0x480 01:37:52: [<ffffffff81194fb2>] vfs_ioctl+0x22/0xa0 01:37:52: [<ffffffff8119547a>] do_vfs_ioctl+0x3aa/0x580 01:37:52: [<ffffffff811956d1>] sys_ioctl+0x81/0xa0 01:37:52: [<ffffffff8100b072>] system_call_fastpath+0x16/0x1b 01:37:52: 01:37:52:Kernel panic - not syncing: LBUG 01:37:52:Pid: 28321, comm: multiop Not tainted 2.6.32-358.6.1.el6.x86_64 #1 01:37:52:Call Trace: 01:37:52: [<ffffffff8150d478>] ? panic+0xa7/0x16f 01:37:52: [<ffffffffa03d6eeb>] ? lbug_with_loc+0x9b/0xb0 [libcfs] 01:37:52: [<ffffffffa0a88974>] ? ll_update_inode+0x334/0x890 [lustre] 01:37:52: [<ffffffffa0a95b22>] ? ll_prep_inode+0x192/0xf60 [lustre] 01:37:52: [<ffffffffa03e72c1>] ? libcfs_debug_msg+0x41/0x50 [libcfs] 01:37:52: [<ffffffffa0a7b756>] ? ll_intent_file_open+0x566/0xfd0 [lustre] 01:37:52: [<ffffffffa0aa3920>] ? ll_md_blocking_ast+0x0/0x750 [lustre] 01:37:52: [<ffffffffa0a7c248>] ? ll_lov_setstripe_ea_info+0x88/0x2d0 [lustre] 01:37:52: [<ffffffffa0a7ec15>] ? ll_lov_setstripe+0x95/0x5a0 [lustre] 01:37:52: [<ffffffffa0a8080a>] ? ll_file_ioctl+0xa9a/0x26b0 [lustre] 01:37:52: [<ffffffff8104757c>] ? __do_page_fault+0x1ec/0x480 01:37:52: [<ffffffff81194fb2>] ? vfs_ioctl+0x22/0xa0 01:37:52: [<ffffffff8119547a>] ? do_vfs_ioctl+0x3aa/0x580 01:37:52: [<ffffffff811956d1>] ? sys_ioctl+0x81/0xa0 01:37:52: [<ffffffff8100b072>] ? system_call_fastpath+0x16/0x1b
- is related to
-
LU-2523 ll_update_inode()) ASSERTION( lu_fid_eq(&lli->lli_fid, &body->fid1) ) failed: Trying to change FID
-
- Resolved
-