LU-3311 mdt: handle -ENOENT && !MDS_OPEN_CREAT in reint open

If mdt_open_anon_by_fid() returns -ENOENT and MDS_OPEN_CREAT
is not set in create flags then bail out and return -ENOENT from
mdt_reint_open(). In mdt_open_anon_by_fid() if -ENOENT is returned
then ensure that DISP_IT_EXECD is set in the reply disposition. Add
sanity test_27B to call the LL_IOC_LOV_SETSTRIPE ioctl() on an open
unlinked file, a situation which triggers the first case. In sanityn
test 30, remote the requirement that opening an unlinked file via
/proc/PID/exe return -ESTALE.

Lustre-commit: dfe7fcd415fa40e2ab059c5201f7df4e2e174e54
Lustre-change: http://review.whamcloud.com/5417

Intel-bug-id: LU-2523
Signed-off-by: James Nunez <james.a.nunez@intel.com>
Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: If81b3cc7f59eb9760c00835cdc3e0eb64d0ac94f